--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
                 <a class="button" id="log-in_button" href="/#/log-in">Log in</a>
                 <a class="button" id="sign-up_button" href="/#/sign-up">Sign up</a>
             </div>
-            <button id="notification_indicator" data-dropdown-target="notification_menu" class="u-mar-l_auto iconButton u-visibility_hidden"><i class="fa fa-bell"></i></button>
+            <button id="notification_indicator" data-dropdown-target="notification_menu" class="iconButton u-visibility_hidden"><i class="fa fa-bell"></i></button>
             <div id="notification_menu" class="dropdown u-p_absolute">
             </div>
             <!-- <button id="search_button" class="u-mar-l_2 u-mar-r_1 iconButton"><i class="fa fa-search"></i></button> -->
@@ -165,11 +165,11 @@
             <!-- <svg id="leaf_connections" width="160" height="280" xmlns="http://www.w3.org/2000/svg" version="1.1"></svg> -->
                 <aside id="detailsPanel">
                     <nav class="detailsPanel__actions u-mar-b_6 u-mar-t_1">
-                        <button class="iconButton add-relationship_button" data-dropdown-target="add-relationship-dropdown"><i class="fa fa-plus"></i></button>
+                        <button class="iconButton add-relationship_button" data-dropdown-target="add-relationship-dropdown" tooltip="Add relationship" tooltip-position="right"><i class="fa fa-plus"></i></button>
                         <div class="detailsPanel__actions-secondary u-mar-l_auto u-d_flex">
-                            <button class="iconButton secondary" id="invite-member-action" data-modal-trigger="invite-member_modal"><i class="fa fa-envelope"></i></button>
-                            <button class="iconButton secondary u-mar-l_2" id="edit-member-action"><i class="fa fa-pencil-alt"></i></button>
-                            <button class="iconButton secondary details__button--close u-mar-l_2"><i class="fa fa-times"></i></button> 
+                            <button class="iconButton secondary" id="invite-member-action" data-modal-trigger="invite-member_modal" tooltip="Invite member" ><i class="fa fa-envelope"></i></button>
+                            <button class="iconButton secondary u-mar-l_2" id="edit-member-action" tooltip="Edit" ><i class="fa fa-pencil-alt"></i></button>
+                            <button class="iconButton secondary details__button--close u-mar-l_2" tooltip="Hide panel" ><i class="fa fa-times"></i></button> 
                         </div>
                     </nav>
                     <!-- <ul id="member-options-dropdown" class="dropdown u-d_none u-p_fixed">
