--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@
                         <button class="rename-tree_save" type="submit">Rename</button>
                     </div>
                 </div>
-                <a href="#" class="modal_button--close iconButton white"><i class="fa fa-times"></i></a>
+                <a href="#" class="modal_button--close iconButton white" tooltip="Close"><i class="fa fa-times"></i></a>
             </form>
         </div>
 
