--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <div id="notification_menu" class="dropdown u-p_absolute">
             </div>
             <!-- <button id="search_button" class="u-mar-l_2 u-mar-r_1 iconButton"><i class="fa fa-search"></i></button> -->
-            <button id="view-preferences_button" class="u-mar-l_2 u-mar-r_2 iconButton u-visibility_hidden" data-dropdown-target="view-preferences"><i class="fa fa-eye"></i></button>
+            <button id="view-preferences_button" class="u-mar-l_2 u-mar-r_2 iconButton" data-dropdown-target="view-preferences"><i class="fa fa-eye"></i></button>
             <div id="view-preferences" class="dropdown u-visibility_hidden u-p_absolute">
                 <div id="view-preferences_tree" class="dropdown__item">Tree</div>
                 <div id="view-preferences_list" class="dropdown__item">List</div>
@@ -39,7 +39,7 @@
             <div id="accountMenu__dropdown" class="dropdown u-p_absolute u-visibility_hidden">
                 <a href="#/my-trees" class="dropdown__item">My trees</a>
                 <a href="#/profile" class="dropdown__item">Profile</a>
-                <a href="#/settings" class="dropdown__item">Settings</a>
+                <!-- <a href="#/settings" class="dropdown__item">Settings</a> -->
                 <div id="sign-out_button" class=" dropdown__item">Sign out</div>
             </div>
 
@@ -268,6 +268,7 @@
             <form id="invite-member_form" class="card modal-dialouge">
                 <div class="card__header">
                     <h2 class="u-mar-b_0">Invite member</h2>
+                    <p>Invite someone to claim this leaf on the family tree. Their profile photo and information will be used.</p>
                 </div>
                 <div class="card__content">
                     <div class="inputGroup">
