styling and permissions for trees list

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
             <div class="modal medium" data-modal="create-tree_modal">
                 <form id="create-tree_form_modal" class="card modal-dialouge">
                     <div class="card__header">
-                        <h1 class="u-mar-b_0">Create family</h1>
+                        <h1 class="u-mar-b_0 u-mar-t_0">Create family</h1>
                     </div>
                     <div class="card__content">
                         <div class="inputGroup">
@@ -159,7 +159,6 @@
         <div style="display:none" data-view="tree">
             <div class="debugMessage"></div>
             <section id="mainContent">
-
             <section id="familyTree">
                 <div id="branchContainer"></div>
             </section>
